--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,46 @@
-#tab{
+body {
+  font-size: 80%;
+  font-family: 'Lucida Grande', Verdana, Arial, Sans-Serif;
+}
+
+#tab {
     list-style-type: none;
-    margin: 0;
-    padding: 0;
+    margin: 30px 0 0 0;
+    padding: 0 0 0.3em 0;
 }
 
 li {
     display: inline;
-    border: 1px solid black;
+
+}
+
+li a {
+  color: #42454a;
+  background-color: #dedbde;
+  border: 1px solid #c9c3ba;
+  border-bottom: none;
+  padding: 0.3em;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #f1f0ee;
+}
+
+.active {
+  color: #000;
+  background-color: #f1f0ee;
+  font-weight: bold;
+  padding: 0.7em 0.3em 0.38em 0.3em;
 }
 
 #content {
-
-    border: 1px solid black;
-
+  border: 1px solid #c9c3ba;
+  padding: 0.5em;
+  background-color: #f1f0ee;
 }
 
-#active {
-
+img {
+  width: 300px;
+  height: 300px;
 }
