--- a/css/style.css
+++ b/css/style.css
@@ -15,29 +15,29 @@ li {
 }
 
 li a {
-  color: #42454a;
-  background-color: #dedbde;
-  border: 1px solid #c9c3ba;
+  color: #6497b1;
+  background-color: #13455e;
+  border: 1px solid #256685;
   border-bottom: none;
   padding: 0.3em;
   text-decoration: none;
 }
 
 li a:hover {
-  background-color: #f1f0ee;
+  background-color: #6497b1;
 }
 
 .active {
   color: #000;
-  background-color: #f1f0ee;
+  background-color: #6497b1;
   font-weight: bold;
   padding: 0.7em 0.3em 0.38em 0.3em;
 }
 
 #content {
-  border: 1px solid #c9c3ba;
+  border: 1px solid #256685;
   padding: 0.5em;
-  background-color: #f1f0ee;
+  background-color: #6497b1;
 }
 
 img {
